--- a/Karen_2019_6_people.html
+++ b/Karen_2019_6_people.html
@@ -202,6 +202,7 @@ function switch_function(n) {
 /***************************************************************************/
 
 // parameters are numbers not available or used in previous iterations
+// the iteration parameter is used to select the document table row to print
 
 /****** [ EDIT ] number of parameters appropriate for amount of people ******/
 function call_c(a1, a2, a3, a4, a5, a6, iteration) {
