Santa_6_people_v2.html

--- a/Santa_6_people_v2.html
+++ b/Santa_6_people_v2.html
@@ -122,7 +122,7 @@ function max_number_people() {
 /***************************************************************************/
 
 function run_time_check() {
-    var check = true;  /* [ EDIT ] to true to show runtime check */
+    var check = false;  /* [ EDIT ] to true to show runtime check */
     return check;
 }
 
